Стилизация Админ-панели, профиля, добавлена возможность указывать количество людей при выборе пакетов услуг